src/assets/css/header.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body{
  font-family: sans-serif;
}
header{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: antiquewhite;
  width: 100%;
  padding: 20px 60px;
}
header h1{
  font-size: 24px;
  cursor: pointer;
}
header img{
  width: 50px;
}
nav{
  position: sticky;
  top: 0;
  z-index: 1000;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
}
nav ul{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  list-style-type: none;
  gap: 120px;
  background-color: darkblue;
  padding: 20px;
}
nav li a{
  text-decoration: none;
  color: white;
  font-size: 16px;
}
nav li a:hover{
  text-decoration: underline;
}

